--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/tasks">Go to Todo App</a>
     <h1>HOMEPAGE!</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, est. Aliquid sit voluptatum ad officiis minus, in necessitatibus sunt asperiores neque quo. Laboriosam at voluptatem aspernatur. Doloremque repudiandae saepe sit?</p>
 </body>
