--- a/public/css/task.css
+++ b/public/css/task.css
@@ -2,8 +2,7 @@
     margin-top: 100px;
     border: 1px solid black;
     border-radius: 10px;
-    box-shadow: inset;
-    background-color: aquamarine;
+    box-shadow: 1px 1px 5px 1px;
     max-width: 700px !important;
 }
 
